--- a/backend/libraries/types/Cargo.toml
+++ b/backend/libraries/types/Cargo.toml
@@ -5,4 +5,7 @@ edition.workspace = true
 
 [dependencies]
 axum.workspace = true
+chrono.workspace = true
+uuid.workspace = true
 serde.workspace = true
+sqlx.workspace = true
