--- a/backend/database/Cargo.toml
+++ b/backend/database/Cargo.toml
@@ -6,3 +6,4 @@ edition.workspace = true
 [dependencies]
 sqlx.workspace = true
 utils.path = "../libraries/utils"
+types.path = "../libraries/types"
