--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -5,8 +5,13 @@ edition.workspace = true
 
 [dependencies]
 axum.workspace = true
+axum-extra.workspace = true
+chrono.workspace = true
 database.path = "../database"
 hyper.workspace = true
+serde.workspace = true
 tokio.workspace = true
 tower-http.workspace = true
+twitter-v2.workspace = true
 utils.path = "../libraries/utils"
+types.path = "../libraries/types"
