--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ sqlx = { version = "0.8.3", features = [
 ] }
 thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["full"] }
+tower = { version = "0.5.2", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 twitter-v2 = "0.1.8"
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
