feat: set wallet address api

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
+async-trait = "0.1.88"
 axum = "0.8.3"
 axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
 chrono = { version = "0.4.40", features = ["serde"] }
@@ -32,3 +33,4 @@ tower-http = { version = "0.6.2", features = ["full"] }
 twitter-v2 = "0.1.8"
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
 url = "2.5.4"
+validator = { version = "0.20.0", features = ["derive"] }
