--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "backend/libraries/types",
     "backend/libraries/utils",
     "backend/server",
+    "programs/snake_contract",
 ]
 resolver = "2"
 
@@ -12,6 +13,8 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace.dependencies]
+anchor-lang = { version = "0.31.0", features = ["init-if-needed"] }
+anchor-spl = { version = "0.31.0" }
 async-trait = "0.1.88"
 axum = "0.8.3"
 axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
@@ -34,3 +37,13 @@ twitter-v2 = "0.1.8"
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
 url = "2.5.4"
 validator = { version = "0.20.0", features = ["derive"] }
+
+[profile.release]
+overflow-checks = true
+lto = "fat"
+codegen-units = 1
+
+[profile.release.build-override]
+opt-level = 3
+incremental = false
+codegen-units = 1
