--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "backend/database",
+    "backend/jobs",
     "backend/libraries/types",
     "backend/libraries/utils",
     "backend/server",
@@ -22,6 +23,7 @@ chrono = { version = "0.4.40", features = ["serde"] }
 dotenv = "0.15.0"
 hyper = { version = "1.6.0", features = ["full"] }
 rand = "0.9.0"
+reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 sqlx = { version = "0.8.3", features = [
     "runtime-async-std-native-tls",
@@ -32,10 +34,12 @@ sqlx = { version = "0.8.3", features = [
 thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["full"] }
 tower = { version = "0.5.2", features = ["full"] }
+tokio-cron-scheduler = "0.13.0"
 tower-http = { version = "0.6.2", features = ["full"] }
 twitter-v2 = "0.1.8"
 uuid = { version = "1.16.0", features = ["serde", "v4"] }
 url = "2.5.4"
+urlencoding = "2.1.3"
 validator = { version = "0.20.0", features = ["derive"] }
 
 [profile.release]
