add get_claim_tx api

--- a/backend/libraries/types/Cargo.toml
+++ b/backend/libraries/types/Cargo.toml
@@ -4,6 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anchor-client.workspace = true
 async-trait.workspace = true
 axum.workspace = true
 chrono.workspace = true
