--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,8 @@ anyhow = "1.0.95"
 async-trait = "0.1.88"
 axum = "0.8.3"
 axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
+base64 = "0.22.1"
+bincode = "1.3.3"
 chrono = { version = "0.4.40", features = ["serde"] }
 dotenv = "0.15.0"
 hyper = { version = "1.6.0", features = ["full"] }
