--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -4,6 +4,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anchor-client.workspace = true
+base64.workspace = true
+bincode.workspace = true
 axum.workspace = true
 axum-extra.workspace = true
 chrono.workspace = true
@@ -16,3 +19,6 @@ tower-http.workspace = true
 twitter-v2.workspace = true
 utils.path = "../libraries/utils"
 types.path = "../libraries/types"
+snake_contract = { path = "../../programs/snake_contract", features = [
+    "no-entrypoint",
+] }
