--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -13,6 +13,8 @@ chrono.workspace = true
 database.path = "../database"
 hyper.workspace = true
 serde.workspace = true
+spl-associated-token-account.workspace = true
+spl-token.workspace = true
 tokio.workspace = true
 tower.workspace = true
 tower-http.workspace = true
