--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ hyper = { version = "1.6.0", features = ["full"] }
 rand = "0.9.0"
 reqwest = { version = "0.12.15", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.138"
 solana-client = "2.2.7"
 solana-sdk = "2.2.2"
 solana-transaction-status = "2.2.7"
