--- a/backend/jobs/Cargo.toml
+++ b/backend/jobs/Cargo.toml
@@ -11,6 +11,7 @@ chrono.workspace = true
 database.path = "../database"
 reqwest.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 snake_contract = { path = "../../programs/snake_contract", features = [
     "no-entrypoint",
 ] }
