--- a/backend/jobs/Cargo.toml
+++ b/backend/jobs/Cargo.toml
@@ -9,6 +9,7 @@ base64.workspace = true
 borsh.workspace = true
 chrono.workspace = true
 database.path = "../database"
+oauth10a.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
