feat: add sending comment feature

--- a/backend/jobs/Cargo.toml
+++ b/backend/jobs/Cargo.toml
@@ -9,7 +9,6 @@ base64.workspace = true
 borsh.workspace = true
 chrono.workspace = true
 database.path = "../database"
-oauth10a.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
@@ -22,5 +21,6 @@ solana-transaction-status.workspace = true
 tokio.workspace = true
 tokio-cron-scheduler.workspace = true
 types.path = "../libraries/types"
+twitter-v2.workspace = true
 urlencoding.workspace = true
 utils.path = "../libraries/utils"
