--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -20,6 +20,7 @@ tower.workspace = true
 tower-http.workspace = true
 twitter-v2.workspace = true
 utils.path = "../libraries/utils"
+uuid.workspace = true
 types.path = "../libraries/types"
 snake_contract = { path = "../../programs/snake_contract", features = [
     "no-entrypoint",
