--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,8 @@ dotenv = "0.15.0"
 hyper = { version = "1.6.0", features = ["full"] }
 qrcode-generator = "5.0.0"
 rand = "0.9.1"
-reqwest = { version = "0.12.15", features = ["json", "multipart"] }
+reqwest = { version = "0.12.15" }
+reqwest-oauth1 = { version = "0.3.0", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.138"
 solana-client = "2.2.7"
