--- a/backend/jobs/Cargo.toml
+++ b/backend/jobs/Cargo.toml
@@ -11,6 +11,7 @@ chrono.workspace = true
 database.path = "../database"
 qrcode-generator.workspace = true
 reqwest.workspace = true
+reqwest-oauth1.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snake_contract = { path = "../../programs/snake_contract", features = [
