--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,6 +1,6 @@
 [toolchain]
-anchor_version = "0.31.0"
-solana_version = "2.1.19"
+anchor_version = "0.31.1"
+solana_version = "2.1.18"
 package_manager = "yarn"
 
 [features]
@@ -8,7 +8,7 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-snake_contract = "Aw4zQtbMuxCChXS923HeyhAMPakC8KMQa6tQmMS4pPYM"
+snake_contract = "GkRRA3Jhds6sxDr89wMneCjNDDmHof2zqnHdjaqP7kGU"
 
 [programs.devnet]
 snake_contract = "Aw4zQtbMuxCChXS923HeyhAMPakC8KMQa6tQmMS4pPYM"
@@ -17,8 +17,13 @@ snake_contract = "Aw4zQtbMuxCChXS923HeyhAMPakC8KMQa6tQmMS4pPYM"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "devnet"
+cluster = "localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[workspace]
+members = [
+  "programs/snake_contract"
+]
