--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -14,6 +14,7 @@ database.path = "../database"
 hyper.workspace = true
 qrcode-generator.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 spl-associated-token-account.workspace = true
 spl-token.workspace = true
 tokio.workspace = true
