--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -16,6 +16,7 @@ qrcode-generator.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 spl-associated-token-account.workspace = true
+sqlx.workspace = true
 spl-token.workspace = true
 tokio.workspace = true
 tower.workspace = true
