--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -29,3 +29,5 @@ snake_contract = { path = "../../programs/snake_contract", features = [
     "no-entrypoint",
 ] }
 anyhow.workspace = true
+log = "0.4.27"
+sha2 = "0.10.9"
