--- a/Anchor.toml
+++ b/Anchor.toml
@@ -8,7 +8,7 @@ resolution = true
 skip-lint = false
 
 [programs.devnet]
-snake_contract = "CLhbCetmpAFowhsKJM9XDJ5AWgkiDUmNPJV7CTZzFDsL"
+snake_contract = "A75BhFuMiJoe3bwNXAJbsPykKSQfvVhC5oYH9k9X6RQy"
 
 [registry]
 url = "https://api.apr.dev"
@@ -18,7 +18,7 @@ cluster = "devnet"
 wallet = "/home/super/.config/solana/devnet.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/user_role_registry_tests.ts tests/patron_framework.ts tests/vesting_OTCswap.ts"
+test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/otc_swap_enhanced.ts"
 
 [workspace]
 members = [
