Fix: staking oprtion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
     "backend/server",
     "backend/jobs",
     "programs/snake_contract",
+    "tests",
 ]
 resolver = "2"
 
@@ -17,6 +18,7 @@ edition = "2021"
 anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = { version = "0.31.1" }
 anchor-client = { version = "0.31.1" }
+solana-program-test = "2.2.2"
 anyhow = "1.0.95"
 async-trait = "0.1.88"
 axum = "0.8.3"
