--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "license": "ISC",
   "scripts": {
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+    "test": "anchor test",
+    "test:otc": "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/otc_swap_enhanced.ts",
+    "test:all": "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.31.0",
