--- a/Anchor.toml
+++ b/Anchor.toml
@@ -10,6 +10,9 @@ skip-lint = false
 [programs.devnet]
 snake_contract = "A75BhFuMiJoe3bwNXAJbsPykKSQfvVhC5oYH9k9X6RQy"
 
+[programs.localnet]
+snake_contract = "BWzCm61AEgjSrRvinG4HEiNdVhLPabsPqvEPG96AN2pL"
+
 [registry]
 url = "https://api.apr.dev"
 
