--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,10 @@ uuid = { version = "1.16.0", features = ["serde", "v4"] }
 url = "2.5.4"
 urlencoding = "2.1.3"
 validator = { version = "0.20.0", features = ["derive"] }
+log = "0.4.27"
+sha2 = "0.10.9"
+hex = "0.4.3"
+env_logger = "0.11"
 
 [profile.release]
 overflow-checks = true
