--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -5,6 +5,7 @@ edition.workspace = true
 
 [dependencies]
 anchor-client.workspace = true
+solana-client.workspace = true
 base64.workspace = true
 bincode.workspace = true
 axum.workspace = true
@@ -29,6 +30,7 @@ snake_contract = { path = "../../programs/snake_contract", features = [
     "no-entrypoint",
 ] }
 anyhow.workspace = true
-log = "0.4.27"
-sha2 = "0.10.9"
-hex = "0.4.3"
+log.workspace = true
+sha2.workspace = true
+hex.workspace = true
+env_logger.workspace = true
