--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,11 @@
 members = [
     "backend/database",
     "backend/libraries/types",
-    "backend/libraries/utils",
+
     "backend/server",
     "backend/jobs",
     "programs/snake_contract",
-    "tests",
+
 ]
 resolver = "2"
 
@@ -18,7 +18,6 @@ edition = "2021"
 anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
 anchor-spl = { version = "0.31.1" }
 anchor-client = { version = "0.31.1" }
-solana-program-test = "2.2.2"
 anyhow = "1.0.95"
 async-trait = "0.1.88"
 axum = "0.8.3"
@@ -36,17 +35,22 @@ reqwest = { version = "0.12.15" }
 reqwest-oauth1 = { version = "0.3.0", features = ["json"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.138"
+solana-program = "2.2.7"
+solana-program-test = "2.2.7"
 solana-client = "2.2.7"
-solana-sdk = "2.2.2"
+solana-sdk = "2.2.7"
 solana-transaction-status = "2.2.7"
-spl-associated-token-account = "3.0.2"
-spl-token = "4.0.0"
+
 sqlx = { version = "0.8.3", features = [
     "runtime-async-std-native-tls",
     "postgres",
     "chrono",
     "uuid",
 ] }
+spl-associated-token-account = "3.0.3"
+spl-token = "4.0.0"
+spl-pod = "0.2.2"
+spl-type-length-value = "0.5.0"
 thiserror = "2.0.12"
 tokio = { version = "1.44.2", features = ["full"] }
 tower = { version = "0.5.2", features = ["full"] }
@@ -71,3 +75,4 @@ codegen-units = 1
 opt-level = 3
 incremental = false
 codegen-units = 1
+
