--- a/backend/server/Cargo.toml
+++ b/backend/server/Cargo.toml
@@ -23,6 +23,7 @@ tokio.workspace = true
 tower.workspace = true
 tower-http.workspace = true
 twitter-v2.workspace = true
+spl-type-length-value = { workspace = true }
 utils.path = "../libraries/utils"
 uuid.workspace = true
 types.path = "../libraries/types"
@@ -34,3 +35,4 @@ log.workspace = true
 sha2.workspace = true
 hex.workspace = true
 env_logger.workspace = true
+
