fix: add education modal and post tweet assist

--- a/backend/database/Cargo.toml
+++ b/backend/database/Cargo.toml
@@ -7,3 +7,8 @@ edition.workspace = true
 sqlx.workspace = true
 utils.path = "../libraries/utils"
 types.path = "../libraries/types"
+chrono.workspace = true
+reqwest.workspace = true
+serde_json.workspace = true
+tokio.workspace = true
+thiserror.workspace = true
